Remove deprecated (#162)
- Replace new xxx by xxx.valueOf
- Replace deprecated setSummary(..)
- Pass List to new SelectInput