@@ -98,7 +98,7 @@ public class BuchungPart implements Part
             "Dokumente");
         BuchungDokument budo = (BuchungDokument) Einstellungen.getDBService()
             .createObject(BuchungDokument.class, null);
-        budo.setReferenz(new Long(bu.getID()));
+        budo.setReferenz(Long.valueOf(bu.getID()));
         DokumentControl dcontrol = new DokumentControl(view, "buchungen",
             !buchungabgeschlossen);
         grDokument.addPart(dcontrol.getDokumenteList(budo));
