@@ -41,6 +41,7 @@ import de.willuhn.jameica.gui.Part;
 import de.willuhn.jameica.gui.formatter.CurrencyFormatter;
 import de.willuhn.jameica.gui.parts.Column;
 import de.willuhn.jameica.gui.parts.TablePart;
+import de.willuhn.jameica.gui.parts.table.FeatureSummary;
 import de.willuhn.util.ApplicationException;
 
 public class BuchungsklasseSaldoList extends TablePart implements Part
@@ -68,10 +69,7 @@ public class BuchungsklasseSaldoList extends TablePart implements Part
 
       if (saldoList == null)
       {
-        GenericIterator gi = PseudoIterator
-            .fromArray(zeile.toArray(new GenericObject[zeile.size()]));
-
-        saldoList = new TablePart(gi, null)
+        saldoList = new TablePart(zeile, null)
         {
           @Override
           protected void orderBy(int index)
@@ -93,7 +91,7 @@ public class BuchungsklasseSaldoList extends TablePart implements Part
             Column.ALIGN_RIGHT);
         saldoList.addColumn("Anzahl", "anzahlbuchungen");
         saldoList.setRememberColWidths(true);
-        saldoList.setSummary(false);
+        saldoList.removeFeature(FeatureSummary.class);
       }
       else
       {
@@ -119,12 +117,12 @@ public class BuchungsklasseSaldoList extends TablePart implements Part
     Double einnahmen;
     Double ausgaben;
     Double umbuchungen;
-    Double suBukEinnahmen = new Double(0);
-    Double suBukAusgaben = new Double(0);
-    Double suBukUmbuchungen = new Double(0);
-    Double suEinnahmen = new Double(0);
-    Double suAusgaben = new Double(0);
-    Double suUmbuchungen = new Double(0);
+    Double suBukEinnahmen = Double.valueOf(0);
+    Double suBukAusgaben = Double.valueOf(0);
+    Double suBukUmbuchungen = Double.valueOf(0);
+    Double suEinnahmen = Double.valueOf(0);
+    Double suAusgaben = Double.valueOf(0);
+    Double suUmbuchungen = Double.valueOf(0);
     HashMap<Double, Double> suNetto = new HashMap<Double, Double>();
     HashMap<Double, Double> suSteuer = new HashMap<Double, Double>();
     HashMap<Double, Double> suBukNetto = new HashMap<Double, Double>();
@@ -138,9 +136,9 @@ public class BuchungsklasseSaldoList extends TablePart implements Part
       {
         if (!rs.next())
         {
-          return new Double(0);
+          return Double.valueOf(0);
         }
-        return new Double(rs.getDouble(1));
+        return Double.valueOf(rs.getDouble(1));
       }
     };
     ResultSetExtractor rsi = new ResultSetExtractor()
@@ -197,9 +195,9 @@ public class BuchungsklasseSaldoList extends TablePart implements Part
       }
 
       buchungsartenIt.setOrder("order by nummer");
-      suBukEinnahmen = new Double(0);
-      suBukAusgaben = new Double(0);
-      suBukUmbuchungen = new Double(0);
+      suBukEinnahmen = Double.valueOf(0);
+      suBukAusgaben = Double.valueOf(0);
+      suBukUmbuchungen = Double.valueOf(0);
       suBukNetto.clear();
       suBukSteuer.clear();
       boolean ausgabe = false;
